--- a/ind.css
+++ b/ind.css
@@ -46,12 +46,12 @@ div {
     align-items: center;
   }
   
-#favoritesDogs {
+#favoriteDogs {
   width: 350px;
   margin: 20px auto;
 }
 
-#favoritesDogs img {
+#favoriteDogs img {
   width: 100%;
   border-radius: 2%;
   box-shadow: -1px 2px 6px 4px #eeeeee;
